--- a/CircularCollectionViewLayout/CCLViewController.xib
+++ b/CircularCollectionViewLayout/CCLViewController.xib
@@ -6,6 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CCLViewController">
             <connections>
+                <outlet property="collectionView" destination="X2q-he-z6U" id="hrv-bP-raU"/>
                 <outlet property="view" destination="1" id="bZn-Fy-vEW"/>
             </connections>
         </placeholder>
@@ -13,7 +14,30 @@
         <view contentMode="scaleToFill" id="1">
             <rect key="frame" x="0.0" y="0.0" width="768" height="1004"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="X2q-he-z6U">
+                    <rect key="frame" x="0.0" y="20" width="768" height="1004"/>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YXD-AV-gwU">
+                        <size key="itemSize" width="50" height="50"/>
+                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <cells/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="PK0-HM-Sn9"/>
+                        <outlet property="delegate" destination="-1" id="YeI-CN-MOy"/>
+                    </connections>
+                </collectionView>
+            </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="X2q-he-z6U" secondAttribute="trailing" id="ExN-dw-a4i"/>
+                <constraint firstItem="X2q-he-z6U" firstAttribute="leading" secondItem="1" secondAttribute="leading" id="eqC-zk-Rn8"/>
+                <constraint firstItem="X2q-he-z6U" firstAttribute="top" secondItem="1" secondAttribute="top" constant="20" id="far-OR-mX0"/>
+                <constraint firstAttribute="bottom" secondItem="X2q-he-z6U" secondAttribute="bottom" constant="-20" id="sMX-9y-CZb"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics" statusBarStyle="blackOpaque"/>
         </view>
     </objects>
